# almond-mocha

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
almond/: .eslintrc.cjs  package.json  tsconfig.json  vite.config.ts
almond-milk/: .eslintrc.cjs  package.json  tsconfig.json
almond-milk/pages/about/: code.css
almond-milk/pages/index/: index.page.tsx
almond-milk/public/: humans.txt
almond-milk/renderer/: PageShell.css
almond-milk/server/: index.ts
migrations/: 20230728043352_initial.down.sql  20230728043352_initial.up.sql
mocha/migrations/: 20230728043352_initial.up.sql
mocha/src/: main.rs
mocha/src/app/: launch.rs  pagination.rs  util.rs
mocha/src/app/auth/: guards.rs  sessions.rs  tokens.rs
mocha/src/app/dto/: auth.rs  posts.rs  spaces.rs  stickers.rs  tags.rs  users.rs
mocha/src/app/entities/: auth.rs  mod.rs  posts.rs  stickers.rs  users.rs
mocha/src/app/storage/postgres/: auth.rs  mod.rs  posts.rs  spaces.rs  stickers.rs  users.rs
mocha/src/app/types/: mod.rs
mocha/src/app/upload/: mod.rs
nginx/: nginx.conf
src/: main.rs
src/app/: config.rs  controller.rs  controllers.rs  errors.rs  health.rs  mod.rs  pagination.rs  routes.rs  state.rs  util.rs
src/app/api/v1/: mod.rs
src/app/api/v1/auth/: controllers.rs  mod.rs
src/app/assets/: README.md
src/app/auth/: controller.rs  controllers.rs  credentials.rs  guards.rs  mod.rs  routes.rs  sessions.rs  state.rs  tokens.rs
src/app/auth/credentials/: jwt.rs  mod.rs
src/app/auth/sessions/: mod.rs  tokens.rs
src/app/datasources/: errors.rs  mod.rs
src/app/datasources/entities/: auth.rs  mod.rs
src/app/datasources/postgres/: auth.rs  mod.rs  users.rs
src/app/datasources/redis/: auth.rs  mod.rs
src/app/datasources/types/: mod.rs
src/app/dto/: auth.rs  mod.rs  pagination.rs  posts.rs  sessions.rs  stickers.rs  types.rs  users.rs
src/app/dto/auth/: mod.rs
src/app/dto/posts/: mod.rs  spaces.rs  stickers.rs  tags.rs
src/app/dto/sessions/: mod.rs
src/app/dto/traits/: mod.rs
src/app/dto/types/: mod.rs
src/app/dto/users/: mod.rs
src/app/entities/: auth.rs  mod.rs  stickers.rs  tags.rs  users.rs
src/app/pagination/: mod.rs
src/app/posts/: controllers.rs  mod.rs  routes.rs
src/app/posts/spaces/: controllers.rs  routes.rs
src/app/posts/tags/: controllers.rs
src/app/storage/: mod.rs
src/app/storage/entities/: auth.rs  mod.rs
src/app/storage/postgres/: auth.rs  mod.rs  stickers.rs  users.rs
src/app/storage/redis/: auth.rs  mod.rs
src/app/types/: mod.rs
src/app/upload/: mod.rs
src/app/users/: controllers.rs  dto.rs  mod.rs  routes.rs
(+26 files in other folders)
