[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
scrypt = "0.11.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.1.0"
sqlx = { version = "0.7.1", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
