[package]
name = "mocha"
version = "0.1.0"
edition = "2021"
authors = ["Anish Sinha <anishsinha0128@gmail.com>"]
description = "A blog for Jenny and me"
keywords = ["web-backend", "jwt-auth", "sqlx"]
publish = false
license = "0BSD"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["cookies"] }
actix-web-httpauth = "0.8.0"
rust-argon2 = "1.0.0"
async-trait = "0.1.72"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.0"
pbkdf2 = "0.12.2"
scrypt = "0.11.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.1.0"
sqlx = { version = "0.7.1", features = [
  "time",
  "uuid",
  "postgres",
  "chrono",
  "runtime-tokio",
  "macros",
] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.8.5"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
openssl = "0.10.55"
rsa = { version = "0.9.2", features = ["sha2"] }
actix-web-grants = "3.0.0"
mobc = "0.8.1"
mobc-redis = "0.8.0"
log = "0.4.19"
hmac = "0.12.1"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.7"
futures-util = "0.3.28"
lazy_static = "1.4.0"
cookie = "0.17.0"
